update release workflow

--- a/.github/workflows/binaries_release2.yml
+++ b/.github/workflows/binaries_release2.yml
@@ -3,9 +3,8 @@
 name: "go: build versioned binaries for darwin"
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [created]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
