--- a/.github/workflows/helm_chart_release.yml
+++ b/.github/workflows/helm_chart_release.yml
@@ -1,8 +1,7 @@
 name: "helm: publish charts"
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [created]
 
 permissions:
   contents: write
