--- a/.github/workflows/container_release5.yml
+++ b/.github/workflows/container_release5.yml
@@ -1,9 +1,8 @@
 name: "docker: build release containers for all tags and large volume"
 
 on:
-  push:
-    tags:
-      - '*'
+  release:
+    types: [created]
   workflow_dispatch: {}
 
 permissions:
