--- a/weed/command/scaffold/filer.toml
+++ b/weed/command/scaffold/filer.toml
@@ -286,6 +286,7 @@ ssl = false
 ssl_ca_file = ""
 ssl_cert_file = ""
 ssl_key_file = "
+insecure_skip_verify = false
 option_pool_size = 0
 database = "seaweedfs"
 
