--- a/.github/workflows/s3tests.yml
+++ b/.github/workflows/s3tests.yml
@@ -43,10 +43,11 @@ jobs:
           cd /__w/seaweedfs/seaweedfs/weed
           go install -buildvcs=false
           set -x
-          nohup weed -v 0 server -filer -filer.maxMB=64 -s3 -ip.bind 0.0.0.0 \
+          weed -v 0 server -filer -filer.maxMB=64 -s3 -ip.bind 0.0.0.0 \
             -master.raftHashicorp -master.electionTimeout 1s -master.volumeSizeLimitMB=1024 \
             -volume.max=100 -volume.preStopSeconds=1 -s3.port=8000 -metricsPort=9324 \
             -s3.allowEmptyFolder=false -s3.allowDeleteBucketNotEmpty=true -s3.config=../docker/compose/s3.json &
+          pid=$!
           sleep 10          
           cd /s3-tests
           tox -- \
@@ -202,7 +203,7 @@ jobs:
           s3tests_boto3/functional/test_s3.py::test_lifecycle_set \
           s3tests_boto3/functional/test_s3.py::test_lifecycle_get \
           s3tests_boto3/functional/test_s3.py::test_lifecycle_set_filter
-          kill -9 $(pgrep weed) || true
+          kill -9 $pid || true
 
       - name: Run Ceph S3 tests with SQL store
         timeout-minutes: 15
@@ -214,10 +215,11 @@ jobs:
           go install -tags "sqlite" -buildvcs=false
           export WEED_LEVELDB2_ENABLED="false" WEED_SQLITE_ENABLED="true" WEED_SQLITE_DBFILE="./filer.db"
           set -x
-          nohup weed -v 0 server -filer -filer.maxMB=64 -s3 -ip.bind 0.0.0.0 -s3.allowListRecursive=true \
+          weed -v 0 server -filer -filer.maxMB=64 -s3 -ip.bind 0.0.0.0 -s3.allowListRecursive=true \
             -master.raftHashicorp -master.electionTimeout 1s -master.volumeSizeLimitMB=1024 \
             -volume.max=100 -volume.preStopSeconds=1 -s3.port=8000 -metricsPort=9324 \
             -s3.allowEmptyFolder=false -s3.allowDeleteBucketNotEmpty=true -s3.config=../docker/compose/s3.json &
+          pid=$!
           sleep 10          
           cd /s3-tests
           tox -- \
@@ -281,3 +283,4 @@ jobs:
           s3tests_boto3/functional/test_s3.py::test_bucket_listv2_objects_anonymous_fail \
           s3tests_boto3/functional/test_s3.py::test_bucket_list_long_name \
           s3tests_boto3/functional/test_s3.py::test_bucket_list_special_prefix
+          kill -9 $pid || true
