Change default value for s3.resources from {} to null
When overriding the default value for s3.resources with own requests and limits installing or upgrading the release will output "coalesce.go:286: warning: cannot overwrite table with non table for seaweedfs.s3.resources (map[])".

This commit fixes this warning by changing s3.resources from {} to null.

--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -765,7 +765,7 @@ s3:
   # should map directly to the value of the resources field for a PodSpec,
   # formatted as a multi-line string. By default no direct resource request
   # is made.
-  resources: {}
+  resources: null
 
   # Toleration Settings for server pods
   # This should be a multi-line string matching the Toleration array
