--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.68"
+    created: "2024-06-10T04:16:58.517267647Z"
+    description: SeaweedFS
+    digest: af52bb05f0e63285477f9f0c3df0d8e8d353409d9de240058369d9f9267106e0
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.68.0.tgz
+    version: 3.68.0
+  - apiVersion: v1
     appVersion: "3.67"
     created: "2024-05-07T15:49:46.864679102Z"
     description: SeaweedFS
@@ -280,4 +289,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-05-07T15:49:46.861752229Z"
+generated: "2024-06-10T04:16:58.514521342Z"
