--- a/k8s/charts/seaweedfs/Chart.yaml
+++ b/k8s/charts/seaweedfs/Chart.yaml
@@ -2,4 +2,5 @@ apiVersion: v1
 description: SeaweedFS
 name: seaweedfs
 appVersion: "3.68"
+# Dev note: Trigger a helm chart release by `git tag -a helm-<version>`
 version: 4.0.0
