Added disbale_tls_verify_client_cert for filer

--- a/weed/command/scaffold/security.toml
+++ b/weed/command/scaffold/security.toml
@@ -115,6 +115,7 @@ ca = ""
 cert = ""
 key = ""
 ca = ""
+# disbale_tls_verify_client_cert = true|false (default: false)
 
 # https client for master|volume|filer connection
 # It is necessary that the parameters  [https.volume]|[https.master]|[https.filer] are set
