--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.69"
+    created: "2024-07-01T06:26:47.244732211Z"
+    description: SeaweedFS
+    digest: e0a153154956821d070cfce69bdccddd474d9a0a59b66946977af95f7f0f5ef4
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-4.0.0.tgz
+    version: 4.0.0
+  - apiVersion: v1
     appVersion: "3.68"
     created: "2024-06-10T04:16:58.517267647Z"
     description: SeaweedFS
@@ -289,4 +298,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2024-06-10T04:16:58.514521342Z"
+generated: "2024-07-01T06:26:47.242417544Z"
