fix keyAlgorithm in Helm chart
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -870,7 +870,7 @@ s3:
 certificates:
   commonName: "SeaweedFS CA"
   ipAddresses: []
-  keyAlgorithm: rsa
+  keyAlgorithm: RSA
   keySize: 2048
   duration: 2160h  # 90d
   renewBefore: 360h  # 15d
