Update COSI driver v0.1.1
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/k8s/charts/seaweedfs/templates/cosi-cluster-role.yaml
+++ b/k8s/charts/seaweedfs/templates/cosi-cluster-role.yaml
@@ -42,9 +42,12 @@ rules:
     - "events"
   verbs:
     - "get"
-    - "delete"
+    - "list"
+    - "watch"
     - "update"
     - "create"
+    - "delete"
+    - "patch"
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
