--- a/k8s/charts/seaweedfs/templates/cosi-cluster-role.yaml
+++ b/k8s/charts/seaweedfs/templates/cosi-cluster-role.yaml
@@ -3,7 +3,7 @@
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "seaweedfs.name" . }}-objectstorage-provisioner
+  name: {{ .Values.global.serviceAccountName }}-objectstorage-provisioner
   labels:
     app.kubernetes.io/name: {{ template "seaweedfs.name" . }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
@@ -52,7 +52,7 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "seaweedfs.name" . }}-objectstorage-provisioner
+  name: {{ .Values.global.serviceAccountName }}-objectstorage-provisioner
   labels:
     app.kubernetes.io/name: {{ template "seaweedfs.name" . }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
@@ -60,10 +60,10 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
 subjects:
   - kind: ServiceAccount
-    name: {{ template "seaweedfs.name" . }}-objectstorage-provisioner
+    name: {{ .Values.global.serviceAccountName }}-objectstorage-provisioner
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ template "seaweedfs.name" . }}-objectstorage-provisioner
+  name: {{ .Values.global.serviceAccountName }}-objectstorage-provisioner
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
