Add: COSI BucketClass and BucketAccessClass
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/k8s/charts/seaweedfs/values.yaml
+++ b/k8s/charts/seaweedfs/values.yaml
@@ -874,6 +874,7 @@ cosi:
   enabled: false
   image: "ghcr.io/seaweedfs/seaweedfs-cosi-driver:v0.1.1"
   driverName: "seaweedfs.objectstorage.k8s.io"
+  bucketClassName: "seaweedfs"
   endpoint: ""
   region: ""
 
